<resources>
    <string name="app_name">YourCompanion</string>
    <string name="facebook_app_id">436250486771319</string>
    <string name="fb_login_protocol_scheme">fb436250486771319</string>
    <string name="txt_please_confirm">Please Confirm</string>
    <string name="txt_sorry">Sorry</string>
    <string name="txt_i_am_sure">Yes, i\'m sure</string>
    <string name="txt_cancel">Cancel</string>
    <string name="err_enter_email">Please enter Email</string>
    <string name="err_enter_valid_email">Please enter valid Email</string>
    <string name="err_enter_fullname">Please enter Fullname</string>
    <string name="err_enter_phone">Please enter Phone</string>
    <string name="err_enter_valid_phone">Please enter valid Phone</string>
    <string name="err_enter_phone_code">Please enter Phone Code</string>
    <string name="err_enter_password">Please enter Password</string>
    <string name="err_enter_confirm_password">Please enter Confirm Password</string>
    <string name="err_diff_password">Password and confirm password does not match</string>
    <string name="err_select_contact">Please select atleast one contact to send a request.</string>
    <string name="err_contain_countrycode">You cannot send friend request to the number which cannot contain country code.</string>
    <string name="err_select_rate">Please select your rate before submit.</string>
    <string name="err_enter_thoughts">Please write your thoughts before submit.</string>
    <string name="err_add_friends">Please add friends to use this feature.</string>
    <string name="err_select_friends">Please select atleast one friends to share your locaiton.</string>
    <string name="hint_email">Your Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="txt_forget_password"><u>FORGET PASSWORD?</u></string>
    <string name="txt_signup"><u>SIGN UP</u></string>
    <string name="txt_or">OR</string>
    <string name="txt_sign_in_with">SIGN IN WITH</string>
    <string name="txt_reset_password">RESET PASSWORD</string>
    <string name="txt_sign_in"><u>SIGN IN</u></string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_phone">Your phone number</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_other">Other</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="txt_continue">CONTINUE</string>
    <string name="txt_menu">MENU</string>
    <string name="txt_settings">Setings</string>
    <string name="txt_helpline_num">Help Line Numbers</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_history">History</string>
    <string name="txt_logout">Logout</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="txt_logout_caps">LOGOUT</string>
    <string name="txt_help_message">Help Message</string>
    <string name="txt_emergency">Emergency</string>
    <string name="txt_alarm_delay">Alarm Delay</string>
    <string name="txt_trigger_power_btn">Trigger on power button double tap</string>
    <string name="hint_help"><i>I am in trouble, Please help me</i></string>
    <string name="txt_save"><i>SAVE</i></string>
    <string name="txt_add_new_friends">Add New Friends</string>
    <string name="txt_add_selected">Add Selected</string>
    <string name="hint_search_frineds">Search Friends</string>
    <string name="txt_add_new_contact">Add New Contact</string>
    <string name="txt_following_you">Following You..</string>
    <string name="txt_timer">Timer</string>
    <string name="txt_follow_me">Follow Me</string>
    <string name="txt_phoney">Phoney</string>
    <string name="txt_current_location">Current\nLocation</string>
    <string name="msg_location_disable">Your Location seems to be disabled, do you want to enable it?</string>
    <string name="title_location_seting">Enable Location</string>
    <string name="title_stop_timer">Stop Timer</string>
    <string name="msg_stop_timer">Are you sure that you want to cancel the timer?</string>
    <string name="txt_HELP">HELP</string>
    <string name="txt_turn_off">TURN\nOFF</string>
    <string name="txt_VIEW_ON_MAP">VIEW ON MAP</string>
    <string name="msg_shared_location">shared a location with you.</string>
    <string name="title_stop_follow_me">Stop Follow Me?</string>
    <string name="msg_stop_follow_me">Are you sure you want to stop Follow Me?</string>
    <string name="title_follow_me_live_now">Follow me live now?</string>
    <string name="msg_follow_me_live_now">wants you to follow him/her to destination safety now.</string>
    <string name="msg_arrived_safely">has arrived at their destination safely. Thanks for being their friend.</string>
    <string name="msg_triggered_alarm">triggered the Companion Alarm and needs your help.</string>
    <string name="txt_start_fake_call">Start a Fake Call</string>
    <string name="txt_from">From:</string>
    <string name="txt_30sec">in 30 sec</string>
    <string name="txt_5min">in 5 min</string>
    <string name="txt_30min">in 30 min</string>
    <string name="txt_1hour">in 1 hour</string>
    <string name="txt_call_now">CALL\nNOW</string>
    <string name="msg_call_set">Your call has been set in</string>
    <string name="txt_incoming_call">Incoming Call…</string>
    <string name="txt_call_from"><i>Daddy</i></string>
    <string name="txt_call">+1 202 555 0125</string>
    <string name="txt_decline">Decline</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_message">Message</string>
    <string name="txt_silent">Silent</string>
    <string name="txt_home">Home</string>
    <string name="txt_my_friends">My Friends</string>
    <string name="txt_add_friend">Add New Friends</string>
    <string name="msg_remove_friend">Are you sure you want to remove this friend?</string>
    <string name="txt_friend_requests">New Requests</string>
    <string name="txt_request_sent">Invited Friends</string>
    <string name="msg_decline_request">Are you sure you want to decline this request?</string>
    <string name="txt_primary_contact">Set Primary Contact</string>
    <string name="txt_phone_call">Call</string>
    <string name="txt_select_friends">Current Location - Select Friends</string>
    <string name="txt_select_follow_me_friends">Follow Me - Select Friends</string>
    <string name="txt_SHARE_LOCATION">SHARE LOCATION</string>
    <string name="txt_share_location">Share Location</string>
    <string name="txt_FOLLOW_ME">FOLLOW ME</string>
    <string name="txt_CANCEL">CANCEL</string>
    <string name="msg_share_location_success">You have successfully shared your Location</string>
    <string name="txt_LOGIN">LOGIN</string>
    <string name="txt_continue_login">Please enter your mobile no. to continue Login.</string>
    <string name="txt_helpline">Helpline</string>
    <string name="txt_think_out_app">What do you think of our app?<font color="#FF0000">*</font></string>
    <string name="txt_share_with_us">What would you like to share with us?<font color="#FF0000">*</font></string>
    <string name="hint_your_thoughts"><i>Your Thoughts</i></string>
    <string name="txt_submit"><i>Submit</i></string>
    <string name="txt_alaram_activated">Alarm Activated</string>
    <string name="txt_sms_to_friend">SMS sent to friends</string>
    <string name="txt_video_recording">Video Recording Started</string>
    <string name="txt_sending_gps_track">Sending GPS Track</string>
    <string name="txt_calling_primary_contact">Calling Primary Contact</string>
    <string name="txt_MAP">MAP</string>
    <string name="txt_DISMISS">DISMISS</string>
    <string name="txt_TURN_OFF">TURN OFF</string>
    <string name="txt_alarm_trigger_in">The Alarm will Trigger in</string>
    <string name="txt_seconds">Seconds</string>
</resources>