<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FF0000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_alram_trigger_bg"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview_alaram_activated_title"
        android:text="@string/txt_alaram_activated"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/txt_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textview_alaram_activated_text"
                android:text="@string/txt_sms_to_friend"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textview_alaram_activated_text"
                android:text="@string/txt_video_recording"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textview_alaram_activated_text"
                android:text="@string/txt_sending_gps_track"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textview_alaram_activated_text"
                android:text="@string/txt_calling_primary_contact"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:background="#DFDFDF"
            android:layout_marginTop="@dimen/margin_20">

            <TextView
                android:id="@+id/txt_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/textview_popup_button"
                android:text="@string/txt_MAP"/>

            <TextView
                android:id="@+id/txt_turn_off"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/textview_popup_button"
                android:text="@string/txt_TURN_OFF"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>