<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_incoming_call"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/txt_incoming_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_incoming_call"
        android:textSize="@dimen/text_14"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginLeft="@dimen/height_20"
        android:layout_marginStart="@dimen/height_20"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/txt_incoming_call"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="@dimen/width_125"
            android:layout_height="@dimen/height_125"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_call_profile_default_boy"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_sim"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_call_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/txt_call_from"
            style="@style/textview_call_from"/>

        <TextView
            android:id="@+id/txt_call_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_call"
            style="@style/textview_call_number"
            android:alpha="0.5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hangup_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_50">
        
        <TextView
            android:id="@+id/txt_decline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_call_number"
            android:drawableTop="@drawable/ic_call_decline"
            android:text="@string/txt_decline"/>

        <TextView
            android:id="@+id/txt_accept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_call_number"
            android:drawableTop="@drawable/ic_call_accept"
            android:text="@string/txt_accept"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/ll_hangup_accept"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/margin_20">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_call_number"
            android:drawableTop="@drawable/ic_sound_off"
            android:text="@string/txt_silent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textview_call_number"
            android:drawableTop="@drawable/ic_call_message_icon"
            android:text="@string/txt_message"/>

    </LinearLayout>

</RelativeLayout>