<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_general"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_splash"
        android:layout_marginTop="@dimen/margin_20"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginTop="@dimen/margin_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_10">

            <EditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawableStart="@drawable/ic_user"
                android:inputType="text"
                android:hint="@string/hint_fullname"
                style="@style/edittext_login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail"
                android:drawableStart="@drawable/ic_mail"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                style="@style/edittext_login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_location"
                android:drawableStart="@drawable/ic_location"
                android:inputType="textPostalAddress"
                android:hint="@string/hint_address"
                style="@style/edittext_login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/edittext_login"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawableStart="@drawable/ic_phone"
                    android:hint="+"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/edt_phone_code"
                    android:layout_width="@dimen/width_60"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Code"
                    android:paddingLeft="@dimen/padding_5"
                    android:maxLength="3"
                    style="@style/edittext_login"/>

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/hint_phone"
                    style="@style/edittext_login"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edittext_login"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_gender"
                    android:layout_marginRight="@dimen/margin_5"/>

                <RadioButton
                    android:id="@+id/rdo_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rdo_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_female"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_10"/>

                <RadioButton
                    android:id="@+id/rdo_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_other"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_10"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                style="@style/edittext_login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"
                style="@style/edittext_login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dfdfe0"/>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/button_login"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/txt_continue"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:id="@+id/txt_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sign_in"
                    style="@style/textview_forget_signup"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>