<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_general"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:background="#707070">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/imageview_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/txt_phoney"
            style="@style/textview_title"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_header"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_fake_call"
            android:textColor="#191919"
            android:textSize="@dimen/text_18"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_50"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_10"
                android:paddingStart="@dimen/padding_10"
                android:text="@string/txt_from"
                android:gravity="center"
                android:textSize="@dimen/text_15"
                android:fontFamily="sans-serif-medium"
                android:textColor="#191919"/>

            <EditText
                android:id="@+id/edt_call_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_10"
                android:hint="@string/txt_call_from"
                android:textColorHint="#b4b4b4"
                android:textColor="#191919"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/ll_30sec"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_80"
                android:background="@android:color/white"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textview_fakecall_time"
                    android:text="@string/txt_30sec"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_5min"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_80"
                android:background="@android:color/white"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textview_fakecall_time"
                    android:text="@string/txt_5min"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/ll_30min"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_80"
                android:background="@android:color/white"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textview_fakecall_time"
                    android:text="@string/txt_30min"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_1hour"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_80"
                android:background="@android:color/white"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textview_fakecall_time"
                    android:text="@string/txt_1hour"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_call_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_panic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_10"/>

    <pkg.android.skynet.yourcompanion.custom.AvenirNextTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_call_now"
        style="@style/textview_panic"
        android:layout_marginBottom="24dp"
        android:layout_alignBottom="@+id/img_call_now"
        android:layout_centerHorizontal="true" />

</RelativeLayout>